<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ManageNamesActivity"
    tools:showIn="@layout/activity_manage_names">

    <EditText
        android:id="@+id/manage_names_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:autofillHints="@string/names_list_auto_fill_hint"
        android:ems="10"
        android:fontFamily="@font/raleway_light"
        android:hint="@string/names_list_auto_fill_hint"

        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/manage_names_add_name_btn"
        app:layout_constraintEnd_toStartOf="@+id/manage_names_add_name_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/manage_names_add_name_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/raleway_light"
        android:text="@string/manage_names_add_btn_text"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/manage_names_list_view"

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"

        app:layout_constraintBottom_toTopOf="@+id/manage_names_save_btn"
        app:layout_constraintTop_toBottomOf="@+id/manage_names_name_input" />

    <Button
        android:id="@+id/manage_names_save_btn"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"

        android:fontFamily="@font/raleway_light"
        android:text="@string/save_changes_btn_text"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/manage_names_cancel_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/manage_names_cancel_btn" />

    <Button
        android:id="@+id/manage_names_cancel_btn"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"

        android:fontFamily="@font/raleway_light"
        android:text="@string/cancel_changes_btn_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/manage_names_save_btn" />


</android.support.constraint.ConstraintLayout>